--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="filter">
             <h1>Насладись прогулкой в горах <br> с командой единомышленников</h1>
-            <form>
+            <form class="date">
                 <div class=" location">
                     <select name="" id="" class="choice">
                         <option value="" disabled selected>Локация для тура</option>
@@ -304,29 +304,23 @@
             </div>
             <div class="gallery_img">
                 <article>
-                    <div class="svg"><img src="./search.svg" alt=""></div>
                     <img src="./1 img.png" alt="" class="impressions">
                 </article>
                 <article>
-                    <div class="svg"><img src="./search.svg" alt=""></div>
                     <img src="./2 img.png" alt="" class="impressions">
                 </article>
                 <article>
-                    <div class="svg"><img src="./search.svg" alt=""></div>
                     <img src="./3 img.png" alt="" class="impressions">
                 </article>
             </div>
             <div class="gallery_img">
                 <article>
-                    <div class="svg"><img src="./search.svg" alt=""></div>
                     <img src="./4 img.png" alt="" class="impressions">
                 </article>
                 <article>
-                    <div class="svg"><img src="./search.svg" alt=""></div>
                     <img src="./5 img.png" alt="" class="impressions">
                 </article>
                 <article>
-                    <div class="svg"><img src="./search.svg" alt=""></div>
                     <img src="./6 img.png" alt="" class="impressions">
                 </article>
             </div>
