--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         </div>
     </section>
-    <section class="programm tur">
+    <!-- <section class="programm tur">
         <div class="media">
             <img src="./Rectangle 5.png" alt="" class="mountain">
             <div class="media_prgm"><img src="./Rectangle 4.png" alt="" class="house">
@@ -94,7 +94,24 @@
             </span>
             <a href="#" class="search">Программа тура</a>
         </div>
-    </section>
+    </section> -->
+    <div class="img-cont">
+        <div class="images">
+            <div class="image image-back">
+                <img src="./Rectangle 5.png" alt="Задняя картинка">
+            </div>
+            <div class="image image-front">
+                <img src="./Rectangle 4.png" alt="Передняя картинка">
+                <button class="play-button">▶</button>
+            </div>
+        </div>
+    
+        <div class="cont">
+            <h2>Исследуйте все горные массивы мира вместе с нами</h2>
+            <p>Его корни уходят в один фрагмент классической латыни 45 года н. э., то есть более двух тысячелетий назад.</p>
+            <button>Программа тура</button>
+        </div>
+    </div>
     <section class="offer">
         <div class="container">
             <div class="content">
