Поправил структуру проекта

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="start">
         <div class="container">
             <header>
-                <div class="logo"><img src="./Group 19 2.svg" alt=""></div>
+                <div class="logo"><img src="./images/Group 19 2.svg" alt=""></div>
                 <div class="arc">
                     <ul class="menu">
                         <li class="menu_items"><a href="" class="menu_items_link">Главная</a></li>
@@ -73,9 +73,9 @@
     </section>
     <!-- <section class="programm tur">
         <div class="media">
-            <img src="./Rectangle 5.png" alt="" class="mountain">
-            <div class="media_prgm"><img src="./Rectangle 4.png" alt="" class="house">
-                <a href=""><img src="./Group 2.png" alt="" class="play"></a></div>
+            <img src="./images/Rectangle 5.png" alt="" class="mountain">
+            <div class="media_prgm"><img src="./images/Rectangle 4.png" alt="" class="house">
+                <a href=""><img src="./images/Group 2.png" alt="" class="play"></a></div>
         </div>
         <div class="btn-tur">
             <span class="turismo">
@@ -98,10 +98,10 @@
     <div class="img-cont">
         <div class="images">
             <div class="image image-back">
-                <img src="./Rectangle 5.png" alt="Задняя картинка">
+                <img src="./images/Rectangle 5.png" alt="Задняя картинка">
             </div>
             <div class="image image-front">
-                <img src="./Rectangle 4.png" alt="Передняя картинка">
+                <img src="./images/Rectangle 4.png" alt="Передняя картинка">
                 <button class="play-button">▶</button>
             </div>
         </div>
@@ -125,7 +125,7 @@
                         профессор латыни из колледжа.
                     </p>
                     <div class="offer-obj">
-                        <div class="first"><img src="./Group 16.png" alt=""></div>
+                        <div class="first"><img src="./images/Group 16.png" alt=""></div>
                         <div class="gid">
                             <h6>Опытный гид</h6>
                             <p>Для современного мира базовый вектор развития предполагает <br>
@@ -133,7 +133,7 @@
                         </div>
                     </div>
                     <div class="offer-obj">
-                        <div class="img"><img src="./Group 17.png" alt=""></div>
+                        <div class="img"><img src="./images/Group 17.png" alt=""></div>
                         <div class="gid">
                             <h6>Безопасный поход </h6>
                             <p>Для современного мира базовый вектор развития предполагает <br>
@@ -141,7 +141,7 @@
                         </div>
                     </div>
                     <div class="offer-obj">
-                        <div class="img"><img src="./Group 18.png" alt=""></div>
+                        <div class="img"><img src="./images/Group 18.png" alt=""></div>
                         <div class="gid">
                             <h6>Лояльные цены</h6>
                             <p>Для современного мира базовый вектор развития предполагает <br>
@@ -152,12 +152,12 @@
                 </div>
                 <div class="nature">
                     <div class="top_journey">
-                        <img src="./Rectangle 8.png" alt="" class="journey">
-                        <img src="./Rectangle 9.png" alt="" class="journey">
+                        <img src="./images/Rectangle 8.png" alt="" class="journey">
+                        <img src="./images/Rectangle 9.png" alt="" class="journey">
                     </div>
                     <div class="bottom_journey">
-                        <img src="./Rectangle 10.png" alt="" class="journey">
-                        <img src="./Rectangle 11.png" alt="" class="journey">
+                        <img src="./images/Rectangle 10.png" alt="" class="journey">
+                        <img src="./images/Rectangle 11.png" alt="" class="journey">
                     </div>
                 </div>
             </div>
@@ -173,10 +173,10 @@
             <div class="turism_imgs">
                 <div class="img_block">
                     <div class="raiting">
-                        <img src="./star.png" alt="">
+                        <img src="./images/star.png" alt="">
                         <span>4.9</span>
                     </div>
-                    <img src="./озеро.jpg" alt="">
+                    <img src="./images/озеро.jpg" alt="">
                     <div class="popular__overlay overlay">
                         <div class="overlay_info">
                             <div class="overlay_title">
@@ -196,10 +196,10 @@
                 </div>
                 <div class="img_block">
                     <div class="raiting">
-                        <img src="./star.png" alt="">
+                        <img src="./images/star.png" alt="">
                         <span>4.5</span>
                     </div>
-                    <img src="./ночь в горах.jpg" alt="">
+                    <img src="./images/ночь в горах.jpg" alt="">
                     <div class="popular__overlay overlay">
                         <div class="overlay_info">
                             <div class="overlay_title">
@@ -219,10 +219,10 @@
                 </div>
                 <div class="img_block">
                     <div class="raiting">
-                        <img src="./star.png" alt="">
+                        <img src="./images/star.png" alt="">
                         <span>5.0</span>
                     </div>
-                    <img src="./йога.jpg" alt="">
+                    <img src="./images/йога.jpg" alt="">
                     <div class="popular__overlay overlay">
                         <div class="overlay_info">
                             <div class="overlay_title">
@@ -252,7 +252,7 @@
             <div class="blog_swiper swiper">
                 <div class="blog_slide">
                     <div class="blog_container">
-                        <div class="blog_img"><img src="./Италия.png" alt=""></div>
+                        <div class="blog_img"><img src="./images/Италия.png" alt=""></div>
                         <div class="blog_inf">
                             <a href="" class="news_title-link">
                                 <h3 class="news_title">Красивая Италия, какая она в реальности?</h3>
@@ -266,7 +266,7 @@
                         </div>
                     </div>
                     <div class="blog_container">
-                        <div class="blog_img"><img src="./Самолет.png" alt=""></div>
+                        <div class="blog_img"><img src="./images/Самолет.png" alt=""></div>
                         <div class="blog_inf"> <a href="" class="news_title-link">
                                 <h3 class="news_title">Долой сомнения! Весь мир открыт для вас!</h3>
                             </a>
@@ -281,7 +281,7 @@
                 </div>
                 <div class="blog_slide">
                     <div class="blog_container">
-                        <div class="blog_img"><img src="./Путешествие.png" alt=""></div>
+                        <div class="blog_img"><img src="./images/Путешествие.png" alt=""></div>
                         <div class="blog_inf"> <a href="" class="news_title-link">
                                 <h3 class="news_title">Как подготовиться к путешествию в одиночку? </h3>
                             </a>
@@ -294,7 +294,7 @@
                         </div>
                     </div>
                     <div class="blog_container">
-                        <div class="blog_img"><img src="./Индия.png" alt=""></div>
+                        <div class="blog_img"><img src="./images/Индия.png" alt=""></div>
                         <div class="blog_inf"> <a href="" class="news_title-link">
                                 <h3 class="news_title">Индия… летим?</h3>
                             </a>
@@ -321,24 +321,24 @@
             </div>
             <div class="gallery_img">
                 <article>
-                    <img src="./1 img.png" alt="" class="impressions">
+                    <img src="./images/1 img.png" alt="" class="impressions">
                 </article>
                 <article>
-                    <img src="./2 img.png" alt="" class="impressions">
+                    <img src="./images/2 img.png" alt="" class="impressions">
                 </article>
                 <article>
-                    <img src="./3 img.png" alt="" class="impressions">
+                    <img src="./images/3 img.png" alt="" class="impressions">
                 </article>
             </div>
             <div class="gallery_img">
                 <article>
-                    <img src="./4 img.png" alt="" class="impressions">
+                    <img src="./images/4 img.png" alt="" class="impressions">
                 </article>
                 <article>
-                    <img src="./5 img.png" alt="" class="impressions">
+                    <img src="./images/5 img.png" alt="" class="impressions">
                 </article>
                 <article>
-                    <img src="./6 img.png" alt="" class="impressions">
+                    <img src="./images/6 img.png" alt="" class="impressions">
                 </article>
             </div>
             <div class="cntr-btn"><button class="btn_gallery">Наш pinterest</button></div>
@@ -382,22 +382,22 @@
                         <ul class="footer_socials">
                             <li class="footer__socials-item">
                                 <a class="footer__social-link" href="#" aria-label="Перейти в наш Telegram"> <img
-                                        src="./TG.svg" alt="" class="footer_svg">
+                                        src="./images/TG.svg" alt="" class="footer_svg">
                                 </a>
                             </li>
                             <li class="footer__socials-item">
                                 <a class="footer__social-link" href="#" aria-label="Перейти в наш Telegram"> <img
-                                        src="./VK.svg" alt="" class="footer_svg">
+                                        src="./images/VK.svg" alt="" class="footer_svg">
                                 </a>
                             </li>
                             <li class="footer__socials-item">
                                 <a class="footer__social-link" href="#" aria-label="Перейти в наш Telegram"> <img
-                                        src="./pics.svg" alt="" class="footer_svg">
+                                        src="./images/pics.svg" alt="" class="footer_svg">
                                 </a>
                             </li>
                             <li class="footer__socials-item">
                                 <a class="footer__social-link" href="#" aria-label="Перейти в наш Telegram"> <img
-                                        src="./skype.svg" alt="" class="footer_svg">
+                                        src="./images/skype.svg" alt="" class="footer_svg">
                                 </a>
                             </li>
                         </ul>
